objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Future Release</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assigned_On__c</fullName>
        <description>captures the date on when the case has been assigned to a resource</description>
        <label>Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Status__c</fullName>
        <description>captures the information if the case is assigned to a resource or not</description>
        <label>Assigned Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>CI Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <defaultValue>&quot;Web&quot;</defaultValue>
        <label>CaseType</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Days__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Closed&quot;),(ClosedDate-CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closure Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_C_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>captures the information if there is a code change required or not.</description>
        <label>Code Change Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_Number__c</fullName>
        <label>Commit Revision Number</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>Data Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EZ_Commits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>EZ Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Resolution__c</fullName>
        <label>Final Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Issue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Often__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>How Often</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Login_Url__c</fullName>
        <description>This captures the AR instance used by User.</description>
        <label>Login Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_A_Assignment__c</fullName>
        <formula>IF( ISPICKVAL(Assigned_Status__c, &quot;Yes&quot;) ,( IF(ISPICKVAL(Status, &quot;In Progress&quot;), TODAY() - DATEVALUE(Assigned_On__c), IF(ISPICKVAL(Status, &quot;Closed&quot;), (ClosedDate-Assigned_On__c),0) )),0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open After Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Since__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status, &quot;Closed&quot;)), TODAY() - DATEVALUE(CreatedDate) , ClosedDate-CreatedDate )</formula>
        <label>Open Since</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remdine_Case_No__c</fullName>
        <description>This captures the redmine case number created for the respective case.</description>
        <label>Redmine Case No</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Text__c</fullName>
        <description>captures the information of the interactions had with user and also if any steps provided to test by user</description>
        <label>Solution Steps</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <description>Clients Suggestions on Support</description>
        <label>Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Support Engineer)</relationshipLabel>
        <relationshipName>contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Rating__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>Support Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Satisfied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Shift_Type__c</fullName>
        <formula>(CASE(VALUE(MID(TEXT(CreatedDate),12,2)),
0, &quot;Night&quot;,
1,&quot;Night&quot;,
2,&quot;Day&quot;,
3,&quot;Day&quot;,
4,&quot;Day&quot;,
5,&quot;Day&quot;,
6,&quot;Day&quot;,
7,&quot;Day&quot;,
8,&quot;Day&quot;,
9,&quot;Day&quot;,
10,&quot;Day&quot;,
11,&quot;Day&quot;,
12,&quot;Day&quot;,
13,&quot;Day&quot;,
14,&quot;Day&quot;,
15,&quot;Day&quot;,
16,&quot;Day&quot;,
17,&quot;Night&quot;,
18,&quot;Night&quot;,
19,&quot;Night&quot;,
20,&quot;Night&quot;,
21,&quot;Night&quot;,
22,&quot;Night&quot;,
23,&quot;Night&quot;,
&quot;The formula did not calculate correctly. please inform the system admin.&quot;))</formula>
        <label>Support Shift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Customer Support Survey</description>
        <label>TAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Rating__c</fullName>
        <description>Created for Customer Support Survey</description>
        <label>User Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Good</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lntcms__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lntcms__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Closure_Days__c</columns>
        <columns>CASES.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deployment_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Builds/Project Failures,Deployments,Sync Orgs</value>
        </filters>
        <label>Deployment Team</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Assigned_To__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Remdine_Case_No__c</columns>
        <columns>Support_Engineer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Open_Since__c</columns>
        <columns>Open_A_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Cases</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Internal_Bug</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>Internal Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Problem</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>